Fix CI build: use wasm-web platform and deterministic bundle output
bob 1.13.0 rejects the renamed js-web platform ("Platform js-web not
supported"), which failed the first Pages deploy. The editor's
__htmlLaunchDir layout does not exist in CLI bundles either, so the
workflow now bundles with --bundle-output and flattens bundle_out/<title>/.
Also bumps actions to current majors (checkout v7, setup-java v6,
upload-pages-artifact v5, deploy-pages v5) to clear Node 20 deprecation
warnings, and syncs README/README_ES/plan docs with the corrected command.

🤖 Generated with Codebuff
Co-Authored-By: Codebuff <noreply@codebuff.com>